feat: add PUT endpoint